--- a/styles/Particles.module.scss
+++ b/styles/Particles.module.scss
@@ -5,8 +5,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 0 0 3.5rem 3.5rem;
-  overflow: hidden;
 }
 
 .particles {
